[gd_scene load_steps=18 format=3 uid="uid://cuyofhu0lkiht"]

[ext_resource type="Script" path="res://Portal.gd" id="1_s6c5q"]
[ext_resource type="Texture2D" uid="uid://d00bkmjesdgnk" path="res://Art/Portal-Sheet.png" id="2_kov05"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5dkc4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l8cq3"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f0rky"]
radius = 14.0
height = 32.0

[sub_resource type="Animation" id="Animation_23r2r"]
resource_name = "Arriving"
length = 1.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Portal-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StaticBody2D/PortalCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_cggyh"]
resource_name = "Pissoff"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Portal-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StaticBody2D/PortalCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_og0hf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Portal-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../StaticBody2D/PortalCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_73u8f"]
_data = {
"Arriving": SubResource("Animation_23r2r"),
"Idle": SubResource("Animation_cggyh"),
"RESET": SubResource("Animation_og0hf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e1dfk"]
animation = &"Arriving"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_rrfbp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_e1dfk")
blend_point_0/pos = 0.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o1wmj"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_6msea"]
blend_point_0/node = SubResource("AnimationNodeAnimation_o1wmj")
blend_point_0/pos = 0.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kdh7w"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ato4v"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dk5nj"]
states/Arriving/node = SubResource("AnimationNodeBlendSpace1D_rrfbp")
states/Arriving/position = Vector2(517.333, 94.2963)
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_6msea")
states/Idle/position = Vector2(366.667, 101.556)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_kdh7w"), "Idle", "Arriving", SubResource("AnimationNodeStateMachineTransition_ato4v")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydfj3"]
size = Vector2(2212, 1248)

[node name="Portal" type="Area2D"]
script = ExtResource("1_s6c5q")

[node name="Portal-sheet" type="Sprite2D" parent="."]
texture = ExtResource("2_kov05")
hframes = 13
frame = 12

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_5dkc4")

[node name="PortalCollision" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CapsuleShape2D_l8cq3")
disabled = true

[node name="PortalInteract" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_f0rky")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PortalInteract")
libraries = {
"": SubResource("AnimationLibrary_73u8f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_dk5nj")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Arriving/blend_position = 0
parameters/Idle/blend_position = 0

[node name="enemies_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemies_detection"]
position = Vector2(867, 473)
shape = SubResource("RectangleShape2D_ydfj3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="enemies_detection" to="." method="_on_enemies_detection_body_entered"]
[connection signal="body_exited" from="enemies_detection" to="." method="_on_enemies_detection_body_exited"]
